output.log
nohup: ignoring input
  File "train_stgcn_server.py", line 1098
    print('✓ Log file closed and saved.')1~import os
                                         ^
SyntaxError: invalid syntax
